# Sudachi

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  bench.bash  dockerbench.bash  fotmat.bash
include/: sudachi-utils.hpp  yosys-json-parser.hpp
src/: CMakeLists.txt  sudachi.cpp
test/: CMakeLists.txt
test/Control/: CMakeLists.txt  build.sbt  build.ys  client.cpp  test.bash  verify.cpp
test/Control/src/main/scala/: ALU.scala  CSR.scala  Control.scala  Instructions.scala
test/Counter/: CMakeLists.txt  Counter.fir  build.sbt  build.ys  client.cpp  test.bash  verify.cpp
test/Counter/src/main/scala/: Counter.scala
test/addermini/: AdderMini.fir  CMakeLists.txt  build.abc  build.sbt  build.ys  client.cpp  test.bash  verify.cpp
test/addermini/src/main/scala/: AdderMini.scala
test/aes/: CMakeLists.txt  build.ys  client.cpp  test.bash
test/c1355/: test.bash
test/c17/: CMakeLists.txt  build.ys  client.cpp  test.bash
test/c1908/: client.cpp  test.bash
test/c2670/: build.ys
test/c2670/verilog/: c2670.v
test/c3540/verilog/: c3540.v
test/c432/: test.bash
test/c499/: build.ys  client.cpp
test/c499/verilog/: c499.v
test/c5315/: build.ys  client.cpp  verify.cpp
test/c7552/: client.cpp
test/c7552/verilog/: c7552.v
test/c880/: build.ys  test.bash
test/fixedaes/: CMakeLists.txt  build.ys  client.cpp  test.bash
test/iscas85/c1355/: CMakeLists.txt  build.ys  test.bash
test/iscas85/c1355/verilog/: c1355.v
test/iscas85/c17/: test.bash
test/iscas85/c1908/: CMakeLists.txt  build.ys  test.bash
test/iscas85/c2670/: CMakeLists.txt  client.cpp  test.bash
test/iscas85/c3540/: CMakeLists.txt  build.ys  client.cpp  test.bash
test/iscas85/c432/: CMakeLists.txt  build.ys  client.cpp  test.bash
test/iscas85/c432/verilog/: c432.v
test/iscas85/c499/: CMakeLists.txt  test.bash
test/iscas85/c5315/: CMakeLists.txt  test.bash
test/iscas85/c5315/verilog/: c5315.v
test/iscas85/c6288/: CMakeLists.txt  build.ys  client.cpp  test.bash
test/iscas85/c6288/verilog/: wrapper.v
test/iscas85/c7552/: CMakeLists.txt  build.ys  test.bash
test/iscas85/c880/: CMakeLists.txt  client.cpp  test.bash
test/mul/: CMakeLists.txt  build.sbt  build.ys  client.cpp  test.bash  verify.cpp
test/mul/src/main/scala/: mul.scala
test/smallmul/: CMakeLists.txt  build.ys  client.cpp  test.bash  verify.cpp
test/smallmul/src/main/scala/: mul.scala
test/xls/: CMakeLists.txt
test/xls/crc32/: CMakeLists.txt  build.ys  client.cpp  crc32.v  verify.cpp
test/xls/riscv-simple/: CMakeLists.txt  build.ys  client.cpp  riscv_simple.v  test.bash  verify.cpp  wrapper.v  xls.bash
test/xls/sobel_filter/: CMakeLists.txt  build.ys  client.cpp  sobel_filter.v  verify.cpp  wrapper.v
thirdparties/crc32/: compile_time_crc.hpp
