set(projectname Counter)
add_executable(${projectname}_client client.cpp)
add_executable(${projectname}_verify verify.cpp)
target_link_libraries(${projectname}_client tfhe++)
target_link_libraries(${projectname}_verify tfhe++)
file(COPY src DESTINATION .)
file(COPY build.sbt DESTINATION .)
file(COPY build.ys DESTINATION .)
file(COPY test.bash DESTINATION .)
add_custom_command(TARGET ${projectname}_client PRE_BUILD COMMAND cd ${CMAKE_CURRENT_BINARY_DIR} && sbt run && yosys build.ys)