add_executable(addermini_client client.cpp)
add_executable(addermini_verify verify.cpp)
target_link_libraries(addermini_client tfhe++)
target_link_libraries(addermini_verify tfhe++)
file(COPY src DESTINATION .)
file(COPY build.sbt DESTINATION .)
file(COPY build.ys DESTINATION .)
file(COPY test.bash DESTINATION .)
add_custom_command(TARGET addermini_client PRE_BUILD COMMAND cd ${CMAKE_CURRENT_BINARY_DIR} && sbt run && yosys build.ys)