add_executable(smallmul_client client.cpp)
add_executable(smallmul_verify verify.cpp)
target_link_libraries(smallmul_client tfhe++)
target_link_libraries(smallmul_verify tfhe++)
file(COPY src DESTINATION .)
file(COPY build.sbt DESTINATION .)
file(COPY build.ys DESTINATION .)
file(COPY test.bash DESTINATION .)
add_custom_command(TARGET smallmul_client PRE_BUILD COMMAND cd ${CMAKE_CURRENT_BINARY_DIR} && sbt run && yosys build.ys)